--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,39 @@
   margin-top: 70px;
 }
 
-.main-grid-item {
-  height: calc(100vh - 85px);
+.form-field {
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+
+.form-field.full-width {
+  width: 100%;
+}
+
+.form-field label {
+  display: block;
+  margin-bottom: 5px;
+  color: #555;
+  font-weight: 500;
+}
+
+.form-field input {
+  width: 100%;
   padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  box-sizing: border-box;
+}
+.btn {
+  display: inline-block;
+  margin-top: 10px;
+  border-radius: 8px;
+  font-weight: bold;
+  padding: 8px 12px;
+  background-color: #1976d2;
+  color: white;
+}
+.btn p {
+  margin: 0;
 }
