--- a/src/components/UserPhotos/styles.css
+++ b/src/components/UserPhotos/styles.css
@@ -30,30 +30,44 @@
   margin-top: 10px;
 }
 .user-photo .photo-item .comment-space .comment-list .comment-item {
-  margin-bottom: 10px;
-}
-.user-photo .photo-item .comment-space .comment-list .comment-item .comment-gr {
-  display: flex;
-  margin-botton: 5px;
-  align-items: center;
+  margin-bottom: 15px;
 }
 .user-photo
   .photo-item
   .comment-space
   .comment-list
   .comment-item
-  .comment-gr
+  .comment-content-wrapper {
+  background-color: #f0f2f5;
+  border-radius: 18px;
+  padding: 8px 12px;
+  display: inline-block;
+  max-width: 100%;
+}
+.user-photo
+  .photo-item
+  .comment-space
+  .comment-list
+  .comment-item
   .comment-author {
   font-weight: bold;
-  border-right: 2px solid #f0f0f0;
-  padding-right: 5px;
+  margin-bottom: 2px;
 }
 .user-photo
   .photo-item
   .comment-space
   .comment-list
   .comment-item
-  .comment-gr
+  .comment-author
+  a {
+  color: #050505;
+  text-decoration: none;
+}
+.user-photo
+  .photo-item
+  .comment-space
+  .comment-list
+  .comment-item
   .comment-author
   a:hover {
   text-decoration: underline;
@@ -63,21 +77,25 @@
   .comment-space
   .comment-list
   .comment-item
-  .comment-gr
-  .comment-date {
-  font-size: 14px;
-  padding-left: 5px;
-  color: #666;
+  .comment-content {
+  color: #050505;
+  font-size: 15px;
 }
 .user-photo
   .photo-item
   .comment-space
   .comment-list
   .comment-item
-  .comment-content {
-  margin-bottom: 5px;
+  .comment-date {
+  font-size: 12px;
+  color: #65676b;
+  margin-top: 4px;
+  margin-left: 12px;
 }
 
+.comment-space .comment-input {
+  margin-top: 16px;
+}
 .comment-space .comment-input label {
   display: block;
   margin-bottom: 5px;
@@ -85,14 +103,29 @@
   font-weight: 500;
 }
 .comment-space .comment-input input {
-  padding: 10px;
+  width: 100%;
+  padding: 8px 12px;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 20px;
   font-size: 14px;
   box-sizing: border-box;
-  margin-bottom: 0px;
+  margin-bottom: 8px;
+  background-color: #f0f2f5;
+}
+.comment-space .comment-input input:focus {
+  outline: none;
+  border-color: #1877f2;
+  background-color: white;
 }
 .comment-space .comment-input .btn {
   border: 0px;
   font-weight: 600;
+  background-color: #1877f2;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.comment-space .comment-input .btn:hover {
+  background-color: #166fe5;
 }
